# admin_client

./: .gitignore  README.md  package.json  svelte.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build_docs.yml  commit.yml  commit_docs.yml  publish_docs.yml  publish_snapshot.yml
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/test/: 123.md  _category_.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  startup.rs  utils.rs
src-tauri/src/shell/: mod.rs
src/components/: TerminalContainer.svelte
src/routes/: +layout.svelte  +page.svelte
src/styles/: main.scss
