[package]
name = "admin-client"
version = "0.0.0"
description = "A Tauri App"
authors = ["Phyrone <phyrone@phyrone.de>"]
license = "GPL-3"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
russh = { version = "0.38.0", features = [] }
tokio = { version = "1.32.0", features = ["full"] }
clap = { version = "4.4.3", features = ["string", "env", "unicode", "cargo", "derive"] }
fast_log = "1.6.2"
log = "0.4.20"
async-trait = "0.1.73"
anyhow = "1.0.75"
rand = { version = "0.8.5", features = ["serde", "log"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
